# tts-wrapper

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: pythonpackage.yml
tests/: conftest.py  google_success.pickle  lib_test.py  polly_success.pickle  requirements.txt  test_apis.py  test_ssml.py  test_tts.py  tts_tests.py
tests/data/: microsoft.pickle
tests/engines/: __init__.py  test_google.py  test_microsoft.py  test_pico.py  test_polly.py  test_sapi.py  test_watson.py
tts_wrapper/: __init__.py  backends.py  exceptions.py  google.py  microsoft.py  polly.py  ssml.py  tts.py  watson.py
tts_wrapper/engines/: __init__.py  utils.py
tts_wrapper/engines/google/: __init__.py  client.py  google.py  ssml.py
tts_wrapper/engines/microsoft/: __init__.py  client.py  microsoft.py  ssml.py
tts_wrapper/engines/pico/: __init__.py  client.py  pico.py
tts_wrapper/engines/polly/: __init__.py  client.py  polly.py  ssml.py
tts_wrapper/engines/sapi/: __init__.py  client.py  sapi.py
tts_wrapper/engines/watson/: __init__.py  client.py  ssml.py  watson.py
tts_wrapper/ssml/: __init__.py  ssml_node.py  ssml_root.py
