[tool.poetry]
name = "tts-wrapper"
version = "0.7.0"
description="A hassle-free Python library that allows one to use text-to-speech APIs with the same interface"
authors = ["Giulio Bottari <giuliobottari@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mediatechlab/tts-wrapper"

[tool.poetry.dependencies]
python = "^3.9"
requests = { version = "^2.28.0", optional = true }
boto3 = {version = "^1.24.21", optional = true}
ibm-watson = {version = "^6.0.0", optional = true}
google-cloud-texttospeech = {version = "^2.11.1", optional = true}

[tool.poetry.extras]
google = ["google-cloud-texttospeech"]
watson = ["ibm-watson"]
polly = ["boto3"]
microsoft = ["requests"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-mock = "^3.5.1"
black = {version = "^22.1.0", allow-prereleases = true}
types-requests = "^2.27.31"
mypy = "^0.961"
types-boto3 = "^1.0.2"
pytest-cov = "^3.0.0"
types-setuptools = "^57.4.18"
filetype = "^1.0.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

